# cpp_checkers_online

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CheckersGame  Makefile  README.md  cmake_install.cmake
backup/: Game.cpp.bak
include/: Board.hpp  Game.hpp  Game.hpp.new  NetworkManager.hpp  Piece.hpp
src/: Board.cpp  Game.cpp  Game.cpp.orig  NetworkManager.cpp  Piece.cpp  main.cpp
